summative.moria.Moria.scala.code
retourne()
while(!estFaceMu) {
  avance()
  if (estSurBiscuit) {
    prendBiscuit()
    retourne()
    while(!estSurBiscuit) {
      avance()
    }
    recule(); poseBiscuit(); retourne()
  }
}